Fix alignment issue

--- a/index.html
+++ b/index.html
@@ -76,47 +76,47 @@
   <h2 style="margin-bottom: 20px">Recent Thoughts</h2>
   
     <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/notepanda/">Starting notepanda</a>
-      </div>
       <div class="blogdate">
         <span>Sep 27</span>
       </div>
+      <div class="blogtitle">
+        <a href="/blog/notepanda/">Starting notepanda</a>
+      </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/joining_amazon/">Joining Amazon</a>
-      </div>
       <div class="blogdate">
         <span>Sep 24</span>
       </div>
+      <div class="blogtitle">
+        <a href="/blog/joining_amazon/">Joining Amazon</a>
+      </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
-      </div>
       <div class="blogdate">
         <span>Aug 26</span>
       </div>
+      <div class="blogtitle">
+        <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
+      </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
-      </div>
       <div class="blogdate">
         <span>Jul 24</span>
       </div>
+      <div class="blogtitle">
+        <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
+      </div>
     </div>
   
     <div class="blogpost">
-      <div class="blogtitle">
-        <a href="/blog/opensource_ridezap/">Open sourcing Ridezap</a>
-      </div>
       <div class="blogdate">
-        <span>Jul 11</span>
+        <span>Jun 4</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
       </div>
     </div>
   
