--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="section" style="">
   <h1>Hi I'm David</h1>
-  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 200px; margin: 15px 30px 0px 0px;"><p>I create applications on the web. Right now my main focus is working for <a href="http://emberex.com/">Emberex</a>, where I do a mix of frontend and backend development.
+  <img src="/assets/images/circle-dj.png" style="float: left; border-radius: 200px; margin: 15px 30px 0px 0px;"><p>I create applications on the web. Right now my main focus is working for <a href="http://www.amazon.com/">Amazon</a>, where I do a mix of frontend and backend development.
   I also spent time building <a href="/projects/ridezap/">RideZap</a> and <a href="https://github.com/thedjpetersen/subway">Subway</a>.
 </p>
 </div>
@@ -77,7 +77,25 @@
   
     <div class="blogpost">
       <div class="blogdate">
-        <span>Sep 27</span>
+        <span>Nov 18</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/supercharging_yeoman/">Supercharging Yeoman</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Nov 18</span>
+      </div>
+      <div class="blogtitle">
+        <a href="/blog/october_dreaming/">Dreaming the October 2012 edition</a>
+      </div>
+    </div>
+  
+    <div class="blogpost">
+      <div class="blogdate">
+        <span>Nov 18</span>
       </div>
       <div class="blogtitle">
         <a href="/blog/notepanda/">Starting notepanda</a>
@@ -99,24 +117,6 @@
       </div>
       <div class="blogtitle">
         <a href="/blog/premature_optimization/">Being performance minded while avoiding premature optimization</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Jul 24</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/november_dreaming/">Dreaming the November 2011 edition</a>
-      </div>
-    </div>
-  
-    <div class="blogpost">
-      <div class="blogdate">
-        <span>Jun 4</span>
-      </div>
-      <div class="blogtitle">
-        <a href="/blog/comparing_webchat_options/">Comparing web chat clients</a>
       </div>
     </div>
   
