New site and layout

--- a/_layout.html
+++ b/_layout.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="col-md-10 main">
-          <p>David Petersen is a frontend web developer living in Seattle Washington.</p>
+          <p>Content goes here</p>
         </div>
       </div>
     </div>
