--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -28,8 +28,8 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-10 main">
-          <p>David Petersen is a frontend web developer living in Seattle Washington.</p>
+        <div class="col-md-10 main"><p>Nothing here yet - what did you expect?</p>
+
         </div>
       </div>
     </div>
